--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ djangorestframework-simplejwt==5.3.1
 et_xmlfile==2.0.0
 fonttools==4.58.2
 frozendict==2.4.6
+gunicorn==20.1.0
 html5lib==1.1
 idna==3.10
 joblib==1.5.1
